tests/invalid/except_tuple_exception_type/main.py
def main() -> None:
    try:
        raise ValueError("boom")
    except (ValueError, TypeError):
        x: int = 1
